# phynance-stop-loss-pct

./: LICENSE  README.md  pyproject.toml
phynance_stop_loss_pct/: calc_trailing_stop.py  symbols.txt
